--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ pandas = "^2.2.2"
 ipykernel = "^6.29.4"
 
 
+[tool.poetry.group.dev.dependencies]
+mlflow = "^2.14.1"
+psycopg2-binary = "^2.9.9"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
