--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ ipykernel = "^6.29.4"
 [tool.poetry.group.dev.dependencies]
 mlflow = "^2.14.1"
 psycopg2-binary = "^2.9.9"
+tabulate = "^0.9.0"
+openpyxl = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core"]
